# shantuiBT2

./: .gitignore  README.md  one_click_ctrlcmd6_test.sh  one_click_start.sh  start.sh
code/include/autonomous_loader_bt/: loader_bt_nodes.h  ros_topic_manager.h
code/lidar_camera_fusion/msg/: Obstacle.msg  PerceptInfo.msg
code/obstacle_avoider/config/: params.yaml
code/obstacle_avoider/src/: obstacle_avoider_node.cpp
code/src/: autonomous_loader_bt_node.cpp  loader_bt_nodes.cpp
code/trees/: 0114.xml  autonomous_loader_tree copy 3.xml  autonomous_loader_tree copy 5.xml  autonomous_loader_tree.xml  autonomous_loader_tree_1228.xml  autonomous_loader_tree_1230.xml
src/: one_click_start.sh
src/autonomous_loader_bt/: CHANGELOG.md  CHANGES_SUMMARY.md  CMakeLists.txt  CODE_LOGIC_ANALYSIS.md  COMPILE_SUCCESS.md  MANUAL_OVERRIDE_DESIGN.md  NAVIGATION_ACTION_SPEC.md  PILEID_FLOW.md  PROGRAM_FLOW_EXPLANATION.md  README.md  SERVICE_INTEGRATION.md  TEST_REPORT.md  package.xml
src/autonomous_loader_bt/config/: autonomous_loader.rviz  loader_config.yaml
src/autonomous_loader_bt/copy/: loader_config.yaml
src/autonomous_loader_bt/docs/: NAVIGATION_INTEGRATION_GUIDE.md  ros_topics_design.md
src/autonomous_loader_bt/include/autonomous_loader_bt/: loader_bt_nodes.h  ros_topic_manager.h
src/autonomous_loader_bt/launch/: autonomous_loader_bt copy.launch  autonomous_loader_bt.launch  test_state_machine.launch
src/autonomous_loader_bt/scripts/: QUICK_START_TEST.md  README_TESTING.md  bt_flow_smoke_test.py  interactive_tester.py  loader_bt_test_node.py  manual_intervention_noNav_tester.py  manual_intervention_tester copy 2.py  manual_intervention_tester copy.py  manual_intervention_tester.py  manual_test_simulator.py  mock_spading_service copy.py  mock_spading_service.py  mock_spading_service_seq.py  module_simulator.py  send_task_example.py  test_behavior_tree_comprehensive.py  test_ctrlcmd6_end_task.py  test_full_workflow.py  test_state_machine.py  test_status_topics.py
src/autonomous_loader_bt/src/: autonomous_loader_bt_node.cpp  loader_bt_nodes.cpp
src/autonomous_loader_bt/trees/: 0610.xml  autonomous_loader_tree copy 2.xml  autonomous_loader_tree copy 4.xml  autonomous_loader_tree copy.xml  autonomous_loader_tree.xml  autonomous_loader_tree0120.xml  manual_override_subtree.xml
src/autonomous_loader_msgs/: CMakeLists.txt  package.xml
src/autonomous_loader_msgs/action/: Navigate_old.action
src/autonomous_loader_msgs/msg/: ScoopPointRequest.msg  TaskCommand.msg  TaskProgress.msg
src/autonomous_loader_msgs/srv/: spadingPose.srv
src/center_articulation_planner_legacy/: CMakeLists.txt  README.md  coop.md  package.xml
src/center_articulation_planner_legacy (1)/center_articulation_planner_legacy/: README.md
src/center_articulation_planner_legacy (1)/center_articulation_planner_legacy/config/: center_articulation_planner_params.yaml
src/center_articulation_planner_legacy (1)/center_articulation_planner_legacy/include/center_articulation_planner/core/: errors.hpp
src/center_articulation_planner_legacy (1)/center_articulation_planner_legacy/include/center_articulation_planner/ros/: planner_ros.hpp  ros_io.hpp
src/center_articulation_planner_legacy (1)/center_articulation_planner_legacy/scripts/: align_in_place_server.py  line1.json  line1_unload_x_plus_0.75.json  sites_bak.json  test_action_gui.py
src/center_articulation_planner_legacy (1)/center_articulation_planner_legacy/src/ros/: planner_ros.cpp  ros_io.cpp
src/center_articulation_planner_legacy/action/: Navigate.action  Navigate_od.action
src/center_articulation_planner_legacy/center_articulation_planner_legacy/: CMakeLists.txt  package.xml
src/center_articulation_planner_legacy/center_articulation_planner_legacy/config/: center_articulation_planner_params.yaml  params.json
src/center_articulation_planner_legacy/center_articulation_planner_legacy/include/center_articulation_planner/core/: config_loader.hpp
src/center_articulation_planner_legacy/center_articulation_planner_legacy/include/center_articulation_planner/ros/: remote_planner_backend.hpp  ros_io.hpp
src/center_articulation_planner_legacy/center_articulation_planner_legacy/launch/: center_articulation_planner.launch
src/center_articulation_planner_legacy/center_articulation_planner_legacy/msg/: IsForwardState.msg
src/center_articulation_planner_legacy/center_articulation_planner_legacy/scripts/: align_logic_monitor.py  sites.json  sites_action_client.py  temp
src/center_articulation_planner_legacy/center_articulation_planner_legacy/src/: config_loader.cpp
src/center_articulation_planner_legacy/center_articulation_planner_legacy/src/ros/: planner_ros.cpp  planner_ros1.cpp  remote_planner_backend.cpp  ros_io.cpp
src/center_articulation_planner_legacy/config/: center_articulation_planner_params.yaml
src/center_articulation_planner_legacy/include/center_articulation_planner/core/: data_type.hpp
src/center_articulation_planner_legacy/include/center_articulation_planner/ros/: planner_ros.hpp  ros_io.hpp
src/center_articulation_planner_legacy/launch/: center_articulation_planner_sim.launch
src/center_articulation_planner_legacy/scripts/: bucket_collision_checker.py  bucket_collision_recover.py  final_goal_reached_test.py  goal_guard_visualizer.py  is_forward_state_feeder.py  sites_publisher.py
src/center_articulation_planner_legacy/src/: planner_node.cpp
src/center_articulation_planner_legacy/src/ros/: planner_ros.cpp  planner_ros_legacy.cpp  ros_io.cpp
src/center_articulation_planner_legacy/srv/: AlignInPlace.srv  PlanHybridPath.srv  SetPlannerParams.srv  pileInfo.srv
src/lidar_camera_fusion/: CMakeLists.txt  package.xml
src/lidar_camera_fusion/msg/: originObs.msg  originObss.msg
src/obstacle_avoider/: CMakeLists.txt  package.xml
src/obstacle_avoider/config/: params.yaml
src/obstacle_avoider/launch/: avoider.launch
src/obstacle_avoider/src/: obstacle_avoider_node.cpp
src/shuju/: CMakeLists.txt  package.xml
src/shuju/msg/: TaskCtrl.msg
src/shuju/srv/: cangdou.srv  taskcontrol.srv
