<?xml version="1.0"?>
<package format="2">
  <name>autonomous_loader_bt</name>
  <version>1.0.0</version>
  <description>自主装载机器人行为树ROS功能包</description>
  <maintainer email="loader@example.com">Autonomous Loader Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <depend>autonomous_loader_msgs</depend>
  <depend>shuju</depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>rosbag_storage</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>xmlrpcpp</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>rosbag_storage</build_export_depend>
  <build_export_depend>rosconsole</build_export_depend>
  <build_export_depend>roscpp_serialization</build_export_depend>
  <build_export_depend>rosgraph_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>rospack</build_export_depend>
  <build_export_depend>rostime</build_export_depend>
  <build_export_depend>xmlrpcpp</build_export_depend>
  <build_export_depend>yaml-cpp</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rosbag_storage</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>roscpp_serialization</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospack</exec_depend>
  <exec_depend>rostime</exec_depend>
  <exec_depend>xmlrpcpp</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
