<?xml version="1.0"?>
<package format="2">
  <name>autonomous_loader_msgs</name>
  <version>1.0.0</version>
  <description>自主装载机器人自定义消息</description>
  <maintainer email="loader@example.com">Autonomous Loader Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
