<?xml version="1.0"?>
<package format="2">
  <name>lidar_camera_fusion</name>
  <version>0.0.1</version>
  <description>Stores custom message definitions for the Shantui project.</description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>

