<?xml version="1.0"?>
<package format="2">
  <name>obstacle_avoider</name>
  <version>0.0.1</version>
  <description>A ROS package for obstacle avoidance based on perception data.</description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>jsk_recognition_msgs</depend>

  <depend>lidar_camera_fusion</depend>

</package>

